removes extra space between tags and fixes small style weirdness

--- a/app/assets/stylesheets/components/profile.css.scss
+++ b/app/assets/stylesheets/components/profile.css.scss
@@ -59,7 +59,7 @@
 
     a {
       color: $article-background-color;
-      margin-right: 8px;
+      margin-right: 5px;
     }
   }
 
